# audiokit.ai

./: .cursorrules  .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierrc  AI_COMMENTS.md  AI_INSTRUCTION.txt  CHANGELOG.txt  CONSCIOUSNESS.txt  LICENSE  MEMORY.txt  MERMAID.txt  PRODUCT.txt  README.md  ROADMAP.txt  TODO.txt  Vozz_Rich_EPK_anthropic_claude-3-opus.md  Vozz_Rich_EPK_anthropic_claude-3.5-sonnet.md  Vozz_Rich_EPK_anthropic_claude-3.5-sonnet.tex  Vozz_Rich_EPK_deepseek_deepseek-r1.md  Vozz_Rich_EPK_mistral_mistral-large.md  Vozz_Rich_EPK_mistralai_mistral-large-2411.md  Vozz_Rich_EPK_mistralai_mistral-large-2411.tex  Vozz_Rich_EPK_openai_gpt-4o-2024-11-20.md  Vozz_Rich_EPK_openai_gpt-4o-2024-11-20.tex  Vozz_Rich_EPK_openai_o1.md  Vozz_Rich_Internal Report_anthropic_claude-3-opus.md  Vozz_Rich_Internal Report_anthropic_claude-3.5-sonnet.md  Vozz_Rich_Internal Report_anthropic_claude-3.5-sonnet.tex  Vozz_Rich_Internal Report_deepseek_deepseek-r1.md  Vozz_Rich_Internal Report_mistral_mistral-large.md  Vozz_Rich_Internal Report_mistralai_mistral-large-2411.md  Vozz_Rich_Internal Report_mistralai_mistral-large-2411.tex  Vozz_Rich_Internal Report_openai_gpt-4o-2024-11-20.md  Vozz_Rich_Internal Report_openai_gpt-4o-2024-11-20.tex  Vozz_Rich_Internal Report_openai_o1.md  Vozz_Rich_epk.md  Vozz_Rich_epk_anthropic_claude-3.5-sonnet.md  (+43 more)
.cursor/rules/: configuration.mdc  configuration.rule  context_management.mdc  context_management.rule  mdc_rules.mdc  open_source_abstraction.mdc  operational.mdc  operational.rule
.github/: dependabot.yml  labeler.yml
.github/workflows/: ci.yml  copyright.yml  docs.yml  docs_coordination.yml  docs_templates.yml  lint_docs.yml  lint_js.yml  lint_python.yml  mlc_config.json  validate_context_files.yml
.husky/: pre-commit  prepare-commit-msg
.markai/: CHANGELOG.txt  CONTEXT.txt  TODO.txt
Vozz Rich/: Vozz_Rich_epk_anthropic_claude-3.5-sonnet.txt  Vozz_Rich_epk_deepseek_deepseek-chat.txt  Vozz_Rich_epk_openai_gpt-4o-2024-11-20.txt  Vozz_Rich_integrated_epk.tex  Vozz_Rich_integrated_internal_report.tex  Vozz_Rich_internal_report_deepseek_deepseek-chat.txt  Vozz_Rich_internal_report_openai_gpt-4o-2024-11-20.txt  Vozz_Rich_json.txt
api/enrich-data/: +server.ts  enrich.cjs  enrich.js  index.js  index.ts
apps/web/: .eslintrc.cjs  .prettierrc  README.md  __init__.py  browserstack.yml  bun.lockb  drizzle.config.ts  (+8 more)
bootstrap/: DAW_PROTOCOL.md
context/: AUDIO_NODES.md  CHANGELOG.txt  CONSCIOUSNESS.md  MAINTENANCE.md  MERMAID.mmd  PROMPT.md  README.md  REFLECTIONS.md  ROADMAP.md  RULES.md  THOUGHTS.md  TODO.md  WHOAMI.md
docker/: Dockerfile  README.md
docs/: AUDIOKIT.md  BOOTSTRAP.md  README.md  SDK.md  VISION.md  authentication.md  build.py  endpoints.md  error_handling.md  examples.md  integration_guide.md  requirements.txt  technical.md  testing.md  user_guide.md  versioning.md
drizzle/: 0000_living_thundra.sql
examples/: sonic_pi_example.py
infra/: main.tf  variables.tf
scripts/: README.md  check_doc_links.py  cleanup_expired_bypasses.py  create_emergency_bypass.py  fix_context_files.py  generate_api_docs.py  generate_docs.py  generate_noise.py  initialize_templates.py  install_cleanup_cron.py  reorganize_docs.py  restructure.py  template_manager.py  update_copyright.py  validate_content_quality.py  validate_context_files.py
src/: app.css  app.d.ts  hooks.client.ts  hooks.server.ts
supabase/: config.toml
(+465 files in other folders)
