[tool.poetry]
name = "audiokit"
version = "0.1.0"
description = "Specialized music distribution platform providing API access and AI-powered tools for artists and developers."
authors = ["Nate Houk <nate@epsilonrecords.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
spotipy = "^2.25.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
pydantic = "^2.10.6"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
pydantic-ai = "^0.0.21"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
