[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audiokit-monorepo"
version = "0.1.0"
description = "Monorepo for AudioKit packages (audiokit and audiokit_ai)"
requires-python = ">=3.8"
authors = [
    { name = "Nathaniel Houk", email = "nate@audiokit.ai" }
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.hatch.build]
# Don't include any packages in the root
packages = []

[tool.hatch.build.targets.wheel]
# Specify package locations
packages = [
    "packages/audiokit/audiokit",
    "packages/audiokit_ai/audiokit_ai",
]

[tool.hatch.workspace]
# Define workspaces
allow-direct-references = true
packages = [
    "packages/audiokit",
    "packages/audiokit_ai",
]

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py38"

# Enable all rules by default, then configure specific rules below
select = ["ALL"]
ignore = [
    "D203",  # no-blank-line-before-class
    "D212",  # multi-line-summary-first-line
    "E501",  # line-too-long (handled by formatter)
]

# Import sorting
[tool.ruff.isort]
known-first-party = ["audiokit_ai", "audiokit_api"]
combine-as-imports = true
lines-after-imports = 2

# Docstring configuration
[tool.ruff.pydocstyle]
convention = "google"

# Format configuration
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = [
    "packages/audiokit_ai/tests",
    # Add other package test paths here
]
addopts = "-v"
python_files = "test_*.py"
markers = [
    "integration: marks tests as integration tests",
]

# Development dependencies for the entire workspace
[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "mypy",
    "pytest-watch",
    "httpx",  # For FastAPI TestClient
]

# Documentation
[tool.pdoc]
output_dir = "docs/api"
docformat = "google"
include_package_readme = true

# Git hooks
[tool.pre-commit]
repos = [
    { repo = "https://github.com/pre-commit/pre-commit-hooks", rev = "v4.4.0" },
    { repo = "https://github.com/charliermarsh/ruff-pre-commit", rev = "v0.1.11" },
]

[project.scripts]
ak = "audiokit.cli:main"

[tool.uvicorn]
app = "audiokit_ai.main:app"
timeout-keep-alive = 600
timeout-graceful-shutdown = 30
ws-max-size = 100000000  # 100MB
proxy-headers = true 